--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux-thunk": "^2.2.0",
     "styled-components": "^3.1.6"
   },
+  "homepage" : "https://dmitry16.github.io/tripsorter/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
