--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "redux-thunk": "^2.2.0",
     "styled-components": "^3.1.6"
   },
-  "homepage" : "https://dmitry16.github.io/tripsorter/",
+  "homepage": "https://dmitry16.github.io/tripsorter/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
