--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bootstrap": "3",
+    "material-design-icons": "^3.0.1",
     "material-ui": "^0.20.0",
+    "mdi-react": "^2.1.19",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
